# app_elements

./: pyproject.toml  setup.py
app_elements/: __init__.py  audio.py  i18n.py  interface.py  menu.py  startup.py
app_elements/locale/af/LC_MESSAGES/: app_elements (Bernd Dorers in Konflikt stehende Kopie 2014-04-15).mo  app_elements (Bernd Dorers in Konflikt stehende Kopie 2014-04-15).po  app_elements (Bernd Dorers in Konflikt stehende Kopie 2014-04-16).mo  app_elements (Bernd Dorers in Konflikt stehende Kopie 2014-04-16).po  app_elements.mo  app_elements.po
app_elements/locale/ar/LC_MESSAGES/: app_elements (Bernd Dorers in Konflikt stehende Kopie 2014-04-15).mo  app_elements (Bernd Dorers in Konflikt stehende Kopie 2014-04-15).po  app_elements.mo  app_elements.po
app_elements/locale/be/LC_MESSAGES/: app_elements.mo  app_elements.po
app_elements/locale/bg/LC_MESSAGES/: app_elements (Bernd Dorers in Konflikt stehende Kopie 2014-04-15).mo  app_elements (Bernd Dorers in Konflikt stehende Kopie 2014-04-15).po  app_elements.mo  app_elements.po
app_elements/locale/bn/LC_MESSAGES/: app_elements.mo  app_elements.po
app_elements/locale/de/LC_MESSAGES/: app_elements (Bernd Dorers in Konflikt stehende Kopie 2014-04-15).po  app_elements.mo  app_elements.po
app_elements/locale/de_De/LC_MESSAGES/: app_elements (Bernd Dorers in Konflikt stehende Kopie 2014-04-15).mo  app_elements.mo  app_elements.po
app_elements/locale/es_ES/LC_MESSAGES/: app4D87.tmp  app_elements (Bernd Dorers in Konflikt stehende Kopie 2014-04-15).po  app_elements.mo  app_elements.po
(+65 files in other folders)
